--- a/package.json
+++ b/package.json
@@ -10,16 +10,12 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "babelify": "^10.0.0",
     "browser-sync": "^2.26.7",
-    "browserify": "^16.5.0",
+    "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-browserify": "^0.5.1",
-    "gulp-plumber": "^1.2.1",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0",
-    "watchify": "^3.11.1"
+    "webpack-stream": "^5.2.1"
   }
 }
