--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-browserify": "^0.5.1",
+    "gulp-if": "^3.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "webpack-stream": "^5.2.1"
